--- a/simple.html
+++ b/simple.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <!--
 --Copyright 2022>
+-->
 <head>
-	<title>An Example Website/title>
+	<title>A very respectful website</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -16,11 +17,11 @@
 	<main class="container">
 	<!-- Content Goes Here -->
 		<p>
-			Just some content
+			Something nice
 		</p>
 	</main>
 	<footer class="container">
-		<p>&copy; Company 2014</p>
+		<p>&copy; Training 2014</p>
 	</footer>
 </body>
 </html>
