mb before rebase conflicts

--- a/simple.html
+++ b/simple.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
-<!--
+<!--Adding changes before rebasing conflict
 --Copyright 2022>
+-->
 <head>
 	<title>A very respectful website</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
