mb conflicting changes brewing

--- a/simple.html
+++ b/simple.html
@@ -3,7 +3,7 @@
 --Copyright 2022>
 -->
 <head>
-	<title>A very respectful website</title>
+	<title>A very respectful dgfskdjgkldsjg</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -17,11 +17,11 @@
 	<main class="container">
 	<!-- Content Goes Here -->
 		<p>
-			Some interesting stuff goes here
+			Somgdsgsdgsdgoes here
 		</p>
 	</main>
 	<footer class="container">
-		<p>&copy; Git Training 2022</p>
+		<p>&copy; Git Traidfdsg 2022</p>
 	</footer>
 </body>
 </html>
