--- a/simple.html
+++ b/simple.html
@@ -17,7 +17,7 @@
 	<main class="container">
 	<!-- Content Goes Here -->
 		<p>
-			Big trouble
+			Big trouble is now resolved
 		</p>
 	</main>
 	<footer class="container">
