Done wiht simple.html updates

--- a/simple.html
+++ b/simple.html
@@ -17,7 +17,7 @@
 	<main class="container">
 	<!-- Content Goes Here -->
 		<p>
-			Big trouble is now resolved
+			Content is changed to add more important stuff
 		</p>
 	</main>
 	<footer class="container">
