changes after git-stash-branch command

--- a/simple.html
+++ b/simple.html
@@ -3,7 +3,7 @@
 --Copyright 2022>
 -->
 <head>
-	<title>A very respectful website</title>
+	<title>Changed for stash example</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
